Add song ID exists checking