@@ -1,7 +1,6 @@
 package com.epam.song.exceptions;
 
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.context.support.DefaultMessageSourceResolvable;
 import org.springframework.http.HttpStatus;
 import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ExceptionHandler;
@@ -12,20 +11,34 @@ import org.springframework.web.context.request.WebRequest;
 import java.util.ArrayList;
 import java.util.Date;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Objects;
 
 @Slf4j
 @RestControllerAdvice
 public class ServiceExceptionHandler {
+
+    @ExceptionHandler(SongIdExistsException.class)
+    @ResponseStatus(value = HttpStatus.CONFLICT)
+    public ErrorMessage songIdExistsException(SongIdExistsException ex, WebRequest request) {
+        log.error("409 Status Code", ex);
+
+        List<String> message = new ArrayList<>();
+        message.add(ex.getMessage());
+
+        return new ErrorMessage(
+                HttpStatus.CONFLICT.value(),
+                new Date(),
+                message,
+                request.getDescription(false));
+    }
 
     @ExceptionHandler(MethodArgumentNotValidException.class)
     @ResponseStatus(value = HttpStatus.BAD_REQUEST)
     public ErrorMessage methodArgumentNotValidException(MethodArgumentNotValidException ex, WebRequest request) {
         log.error("400 Status Code", ex);
 
-        List<String> errors = ex.getBindingResult().getFieldErrors().stream()
-                .map(DefaultMessageSourceResolvable::getDefaultMessage)
-                .collect(Collectors.toList());
+        List<String> errors = ex.getBindingResult().getFieldErrors().stream().filter(Objects::nonNull)
+                .map(m -> (m.getField() + " " + m.getDefaultMessage())).toList();
 
         return new ErrorMessage(
                 HttpStatus.BAD_REQUEST.value(),
